--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Game Project Title Goes Here</title>
+    <title>Mario AmongUs Animation</title>
   
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
+    <script type="text/javascript" src="./animator.js"></script>
+    <script type="text/javascript" src="./backgroundScene.js"></script>
+    <script type="text/javascript" src="./imposter.js"></script>
+    <script type="text/javascript" src="./samus.js"></script>
+    <script type="text/javascript" src="./paperMario.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+
+    // music
+
+    // music
+ASSET_MANAGER.queueDownload("./music/overworld.mp3");
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
